# LaraCC

./: .babelrc  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Makefile  Procfile  README.md  config.json  package.json  webpack.config.js
app/config/: Commons.json  Constants.hpp
app/core/: Controller.h  Controller.hpp  DatabaseConnector.hpp  Kernel.h  Kernel.hpp  Model.h  Model.hpp  ServiceProvider.h  ServiceProvider.hpp  View.h  View.hpp
app/database/: ConnectionInterface.h  Connector.hpp  ConnectorException.hpp  ConnectorInterface.hpp  CppDbConnector.hpp  SQLiteModernCppConnector.hpp
app/http/controllers/: AccountController.hpp  ArticleController.hpp  DashboardController.h  DashboardController.hpp  HomeController.h  HomeController.hpp
app/http/controllers/api/: ApiController.hpp  Article.hpp  HomeController.hpp
app/http/controllers/api/dashboard/: ArticleController.hpp  Login.hpp  LoginController.hpp
app/http/controllers/auth/: LoginController.h  RegisterController.h  SignUpController.hpp
app/http/controllers/dashboard/: ArticleController.hpp
app/models/: Account.h  Account.hpp  Article.hpp
app/routes/: API.hpp  Web.hpp
app/views/: article.hpp  dashboard.h  dashboard.hpp  home.hpp  login.h  login.hpp  register.h  register.hpp
app/views/dashboard/: Article.hpp  Index.hpp  Login.hpp  login.hpp
app/views/dashboard/article/: EditForm.hpp
app/views/layouts/: dashboard.h  dashboard.hpp  home.h  home.hpp  master.h  master.hpp
cmake_modules/: AfterBuilt.cmake  BuildProject.cmake  SetupCompiler.cmake
include/config/: Commons.json
include/core/: Controller.hpp  DatabaseConnector.hpp  Helpers.hpp  Kernel.hpp  Model.hpp  View.hpp
include/database/: SQLiteModernCppConnector.hpp
include/http/controllers/: ApiController.hpp  DashboardController.hpp  HomeController.hpp
include/http/controllers/api/: ApiController.hpp  ArticleController.hpp  HomeController.hpp
include/http/controllers/api/dashboard/: ArticleController.hpp  LoginController.hpp
include/http/controllers/api/home/: ArticleController.hpp
include/http/controllers/auth/: LoginController.hpp  SignUpController.hpp
include/http/controllers/dashboard/: ArticleController.hpp
include/http/controllers/home/: AccountController.hpp  ArticleController.hpp
include/http/controllers/home/auth/: LoginController.hpp  SignUpController.hpp
include/models/: Article.hpp
include/routes/: Api.hpp  Web.hpp
include/views/: Dashboard.hpp  Home.hpp  RegisterForm.hpp  article.hpp  dashboard.hpp  home.hpp  login.hpp  register.hpp
include/views/dashboard/: Article.hpp  Index.hpp  Login.hpp
include/views/dashboard/article/: EditForm.hpp
include/views/home/: Article.hpp  Login.hpp  Register.hpp  RegisterForm.hpp
include/views/layouts/: Dashboard.hpp  Home.hpp  Master.hpp  dashboard.hpp  home.hpp  master.hpp
public/css/: .gitignore  home-theme.css
public/dashboard/css/: style.default.css
public/libs/prism/: prism.css  prism.js
resources/assets/css/: home.css
resources/assets/css/dashboard/: login.css
resources/assets/js/: app.js  dashboard.js  home.js
resources/assets/js/components/: App.jsx  DashboardApp.jsx  HomeApp.js  HomeApp.jsx
resources/assets/js/components/actions/: index.js
resources/assets/js/components/dashboard/: Index.jsx  Login.jsx  index.js  state.js
resources/assets/js/components/dashboard/views/: Index.jsx  Login.jsx  index.js
resources/assets/js/components/home/: Index.jsx  Login.jsx  index.js
resources/assets/js/components/home/views/: Login.jsx  index.js
resources/assets/js/spa/: DashboardApp.jsx  HomeApp.jsx
resources/assets/js/spa/commons/: articleInfo.js  site.js  utils.js
resources/assets/js/spa/dashboard/actions/: articlePage.js  index.js  indexPage.js  loginPage.js  loginPage.jsx
resources/assets/js/spa/dashboard/commons/: dashboard.js
resources/assets/js/spa/dashboard/components/: Breadcrumb.jsx  Footer.jsx  Header.jsx  Main.jsx  Sidebar.jsx
resources/assets/js/spa/home/: index.js
resources/assets/sass/: home.scss
resources/assets/sass/dashboard/: login.scss
resources/views/: .gitattributes  dashboard.blade.chtml  dashboard.tmpl  home.blade.chtml  home.tmpl  login.blade.chtml  login.tmpl  register.tmpl  sign_up.blade.chtml  sign_up.tmpl
resources/views/article/: read.blade.chtml  read.tmpl
resources/views/dashboard/: article.blade.chtml  index.blade.chtml  login.blade.chtml  login.tmpl
resources/views/home/: login.blade.chtml  sign_up.blade.chtml
resources/views/home/article/: read.blade.chtml
resources/views/layouts/: dashboard.blade.chtml  dashboard.tmpl  home.blade.chtml  home.tmpl  master.blade.chtml  master.tmpl
src/: main.cpp
src/core/: Controller.cpp  Helpers.cpp  Kernel.cpp  Model.cpp  ServiceProvider.cpp  View.cpp
src/database/: CppDbConnector.cpp  SQLiteModernCppConnector.cpp
src/http/controllers/: ApiController.cpp  ArticleController.cpp  DashboardController.cpp  HomeController.cpp
src/http/controllers/api/: ApiController.cpp  Article.cpp  ArticleController.cpp  HomeController.cpp
src/http/controllers/api/dashboard/: ArticleController.cpp  Login.cpp
src/http/controllers/api/home/: ArticleController.cpp
src/http/controllers/auth/: LoginController.cpp  RegisterController.cpp  SignUpController.cpp
src/http/controllers/dashboard/: ArticleController.cpp
src/http/controllers/home/: ArticleController.cpp
src/http/controllers/home/auth/: LoginController.cpp  SignUpController.cpp
src/models/: Account.cpp  Article.cpp
src/routes/: API.cpp  Api.cpp  Web.cpp
src/views/: Article.cpp  Home.cpp  Register.cpp  RegisterForm.cpp  register.cpp
src/views/dashboard/article/: EditForm.cpp
src/views/home/: Article.cpp  Register.cpp  RegisterForm.cpp
src/views/layouts/: Home.cpp  Master.cpp  home.cpp
storage/database/: db.sqlite3
storage/database/seeds/: accounts.sql  articles.sql
storage/database/sqls/: db.sql
tools/: create_database.py  deploy-heroku.py  deploy-ibmcloud.py  run-heroku.sh  run.py  update.py
tools/heroku/: Procfile  package.json
(+45 files in other folders)
